# NIIEngine

./: LICENSE  README.md  Version5.6.0beta  zelda_ok  zelda_ok.pub
NII/: CMakeLists.txt  COPYING  NiiEnginePro.深圳闽登科技  README  Thumbs.db  license.h
NII/BuildSystemCore/: log.txt
NII/CMake/: CMakeLists.txt  ConfigureBuild.cmake  Dependencies.cmake  FeatureSummary.cmake  InstallDependencies.cmake  InstallResources.cmake  Packaging.cmake  PrepareThreadingOptions.cmake
NII/CMake/Templates/: DemoLicense.rtf  NII-PCZ.pc.in  NII-Paging.pc.in  NII-Property.pc.in  NII-RTShaderSystem.pc.in  NII-Terrain.pc.in  NIIConfig.cmake.in  NIIConfigVersion.cmake.in  NIIStatic.pc.in  Nii.pc.in  NiiBuildSettings.h.in  SDK_CMakeLists.txt.in  SDK_Samples_CMakeLists.txt.in  VisualStudioUserFile.vcproj.user.in  VisualStudioUserFile.vcxproj.user.in  demos.wxs.in  html.cfg.in  plugins.cfg.in  plugins_d.cfg.in  quakemap.cfg.in  quakemap_d.cfg.in  resources.cfg.in  resources_d.cfg.in  samples.cfg.in  samples_d.cfg.in  tests.cfg.in  tests_d.cfg.in  version.txt.in
NII/CMake/Utils/: FindPkgMacros.cmake  InstallSource.cmake  MacroLogFeature.cmake  NiiAddTargets.cmake  NiiConfigTargets.cmake  NiiFindFrameworks.cmake  NiiFindSource.cmake  NiiGetVersion.cmake  PrecompiledHeader.cmake  PreprocessorUtils.cmake
NII/Components/: CMakeLists.txt
NII/Components/Paging/: CMakeLists.txt
NII/Components/Property/: CMakeLists.txt
NII/Components/RTShaderSystem/: CMakeLists.txt
NII/Components/Terrain/: CMakeLists.txt
NII/Designer/gtk/: nii.glade  test.c
NII/Designer/uistyle/: 280411_Pricing.rar  Design-Elements.psd  HipHop_UI.psd  UI-elements.psd  musicplayer1.psd  player (1).psd  sixbase-ui-kit.psd  sleek-elements.psd  ui.psd  ui_kit.psd
NII/Designer/window/: NIIDesignWindow.h  NIIGtkDesignWindow.h
NII/ImageCore/: log.txt
NII/ImageCore/corona/: corona-1.0.2-src.tar.bz2
NII/ImageCore/libmng/: libmng-1.0.10.tar.bz2
NII/Installer/rpm/: rpm-4.10.2.tar.bz2
NII/MediaCore/: CMakeLists.txt
NII/MediaCore/libmpg123/: mpg123-1.14.2.tar.bz2
NII/MediaCore/libva/: NII.cmd  libva-1.0.15.tar.bz2
NII/MediaCore/libx264/: last_x264.tar.bz2
NII/NIIEngine/: CMakeLists.txt  NII.cmd  Nii.h  NiiDefine.h  SpaceObjID.txt  api.txt
NII/NIIEngine/Audio/: CodecFactory.cpp  CodecFactory.h  ICodec.h  NII.cmd  NiiAudio.cpp  NiiAudio.h  NiiAudioCodec.cpp  NiiAudioCodec.h  NiiAudioFormat.cpp  NiiAudioFormat.h
NII/NIIEngine/Buffer/: NiiBuffer.cpp  NiiBuffer.h  NiiBufferManager.cpp  NiiBufferManager.h
NII/NIIEngine/Codec/: NII.cmd  NiiCodec.cpp  NiiCodec.h  NiiCodecJob.cpp  NiiCodecJob.h  NiiCodecList.h  NiiDecodeJob.cpp  NiiDecodeJob.h  NiiEncodeJob.cpp  NiiEncodeJob.h
NII/NIIEngine/Common/: Base64.cpp  Crc32.cpp  NII.cmd  NiiAny.h  NiiBitSet.cpp  NiiBitSet.h  NiiClipboard.cpp  NiiClipboard.h  NiiCommon.cpp  NiiCommon.h  NiiConfigFile.cpp  NiiConfigFile.h  NiiException.cpp  NiiException.h  NiiExtData.cpp  NiiExtData.h  NiiFactoryObj.cpp  NiiFactoryObj.h  NiiHash.cpp  NiiHash.h  NiiIDHelper.h  NiiIDManager.cpp  NiiIDManager.h  NiiI_A.cpp  NiiI_A.h  NiiListener.h  NiiPath.cpp  NiiPath.h  NiiPattern.cpp  NiiPattern.h  NiiPatternList.h  NiiSearchOps.cpp  NiiSearchOps.h  NiiSharedPtr.h  NiiSingleton.h  md5.cpp
NII/NIIEngine/Cores/: NII.cmd  NiiCore.h  NiiEngine.cpp  NiiEngine.h
NII/NIIEngine/DataStream/: NII.cmd  NiiDataStream.cpp  NiiDefaultStream.cpp  NiiDefaultStream.h  NiiDeflateStream.cpp  NiiDeflateStream.h  NiiTempBuffer.h  log.txt
NII/NIIEngine/Dialog/: NII.cmd  NiiConfigDialog.h  NiiErrorDialog.h
NII/NIIEngine/GpuBuffer/: NiiDisplayBuffer.cpp  NiiDisplayBuffer.h  NiiGBufferManager.cpp  NiiGpuAsync.cpp  NiiGpuBuffer.cpp  NiiGpuBuffer.h  NiiMemGBufferManager.cpp  NiiMemGBufferManager.h  NiiPixelCountQuery.cpp  NiiPixelCountQuery.h  NiiVertexIndexIndirect.cpp  NiiVertexIndexIndirect.h  OgreBufferPacked.h  OgreVertexBufferDownloadHelper.cpp  OgreVertexBufferDownloadHelper.h
NII/NIIEngine/GpuProgarm/: NII.cmd  NiiComputePattern.cpp  NiiComputePattern.h  NiiGpuProgram.cpp  NiiGpuProgramCodeGen.cpp  NiiGpuProgramCodeGen.h  NiiGpuProgramManager.cpp  NiiGpuProgramParam.cpp  NiiGpuProgramParam.h  NiiShadowVolumeExtrudeProgram.cpp  NiiShadowVolumeExtrudeProgram.h  Params.cpp  Params.h
NII/NIIEngine/Image/: NII.cmd  NiiColour.cpp  NiiImage.cpp  NiiImage.h  NiiImageCodec.cpp  NiiImageDownsampler.cpp  NiiImageDownsampler.h  NiiImageDownsamplerImpl.inl  NiiImageResampler.h  NiiPixelConversions.h  NiiPixelFormat.cpp
NII/NIIEngine/Log/: NII.cmd  NiiLogManager.cpp
NII/NIIEngine/Math/: NII.cmd  NiiAABox.cpp  NiiAngle.cpp  NiiAngle.h  NiiBase.h  NiiConvexBody.cpp  NiiConvexBody.h  NiiDualQuaternion.cpp  NiiDualQuaternion.h  NiiEulerAngle.cpp  NiiEulerAngle.h  NiiLinearSpline.cpp  NiiLinearSpline.h  NiiMath.cpp  NiiMath.h  NiiMatrix3.h  NiiNumerics.cpp  NiiNumerics.h  NiiPlane.cpp  NiiPlane.h  NiiPlaneSpace.cpp  NiiPolygon.cpp  NiiPolygon.h  NiiQuaternion.cpp  NiiQuaternion.h  NiiRadian.cpp  NiiRadian.h  NiiRadixSort.h  NiiRay.cpp  NiiRect.h  NiiRotationSpline.cpp  NiiRotationSpline.h  NiiSphere.cpp  NiiTangentSpace.cpp  NiiTangentSpace.h  NiiVector2.h  NiiVector3.h  NiiVector4.h  NiiVertex.h  OgreRotationSpline.cpp  (+3 more)
NII/NIIEngine/Memory/: NiiMemAllocObj.cpp
NII/NIIEngine/Model/: NII.cmd  NiiAnimationEventArgs.h  NiiAnimationManager.cpp  NiiAnimationManager.h
NII/NIIEngine/Picture/: NiiVideoFormat.h
NII/NIIEngine/PixelBuffer/: NiiPixelBuffer.cpp  NiiPixelBuffer.h  NiiPixelManager.cpp  NiiPixelManager.h
NII/NIIEngine/Plugin/: NII.cmd  NiiDynamicModule.cpp  NiiDynamicModule.h  NiiDynamicModuleManager.cpp  NiiDynamicModuleManager.h  NiiPlugin.cpp  NiiScriptModule.cpp  NiiScriptModule.h
NII/NIIEngine/PreInclude/: NII.cmd  NiiBasicTypes.h  NiiCPH.cpp  NiiCPUInfo.cpp  NiiCPUInfo.h  NiiDriverVersion.cpp  NiiGPUInfo.cpp  NiiGPUInfo.h  NiiPlat.h  NiiPlatInfo.cpp  NiiPlatInfo.h  (+4 more)
NII/NetCore/: log.txt
NII/PlugIns/: CMakeLists.txt
NII/RenderSystems/: CMakeLists.txt
NII/Samples/: CMakeLists.txt
NII/ScriptLangCore/: log.txt
NII/SoundSystems/: log.txt
NII/Tests/: CMakeLists.txt
NII/doc/: CMakeLists.txt  link.txt
(+5774 files in other folders)
